# fastapi_demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_cleaning.py
scripts/input/: raw_data.csv
scripts/output/: cleaned_data.csv
src/api/: main.py
src/scripts/: data_cleaner.py
src/tools/: __init__.py
tests/test_scripts/: test_data_cleaner.py
tests/test_tools/: test_measure.py
